# dog

./: CLAUDE.md  Cargo.toml  Justfile  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: dev.yml  release.yml  rust.yml
completions/: dog.bash  dog.fish  dog.nu  dog.ps1  dog.zsh
dns/: Cargo.toml
dns-transport/: Cargo.toml
dns-transport/src/: error.rs  https.rs  tls.rs  tls_stream.rs
dns/src/: strings.rs  wire.rs
dns/src/record/: dhcid.rs  dnskey.rs  ds.rs  ipseckey.rs  mod.rs  nsec.rs  nsec3.rs  nsec3param.rs  openpgpkey.rs  rrsig.rs  smimea.rs
man/: dog.1.md
src/: cli.rs  colours.rs  hints.rs  logger.rs  main.rs  options.rs  output.rs  table.rs  usage.txt
