[package]
name = "dog"
description = "A command-line DNS client"

authors = ["Benjamin Sago <ogham@bsago.me>"]
categories = ["command-line-utilities"]
edition = "2018"
exclude = [
    "/completions/*", "/man/*", "/xtests/*",
    "/dog-screenshot.png", "/Justfile", "/README.md", "/.rustfmt.toml", "/.travis.yml",
]
homepage = "https://dns.lookup.dog/"
license = "EUPL-1.2"
version = "0.4.1-pre"


[[bin]]
name = "dog"
path = "src/main.rs"
doctest = false


# make dev builds faster by excluding debug symbols
[profile.dev]
debug = false
incremental = true
codegen-units = 16
opt-level = 0

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true
overflow-checks = true
panic = "abort"


[dependencies]
hickory-resolver = { version = "0.24.1", features = ["dns-over-rustls", "dns-over-https-rustls"] }
tokio = { version = "1", features = ["full"] }

# command-line
ansi_term = "0.12"
atty = "0.2"
getopts = "0.2"

# transaction ID generation
rand = "0.8"

# json output
json = "0.12"

# async utilities
futures = "0.3"

# logging
log = "0.4"

# windows default nameserver determination
[target.'cfg(windows)'.dependencies]
ipconfig = { version = "0.3" }

[build-dependencies]
datetime = { version = "0.5.2", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4"
