[package]
name = "dog"
description = "A command-line DNS client"

authors = ["Benjamin Sago <ogham@bsago.me>"]
categories = ["command-line-utilities"]
edition = "2018"
exclude = [
    "/completions/*", "/man/*", "/xtests/*",
    "/dog-screenshot.png", "/Justfile", "/README.md", "/.rustfmt.toml", "/.travis.yml",
]
license = "GPL-3.0-or-later"
version = "0.5.5"


[[bin]]
name = "dog"
path = "src/main.rs"
doctest = false


# make dev builds faster by excluding debug symbols
[profile.dev]
debug = false
incremental = true
codegen-units = 16
opt-level = 0

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true
overflow-checks = true
panic = "abort"


[dependencies]
hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls", "webpki-roots"] }
tokio = { version = "1", features = ["full"] }

# command-line
ansi_term = "0.12"
atty = "0.2"
clap = "4"

# transaction ID generation
rand = "0.8"

# json output
json = "0.12"

# async utilities
futures = "0.3"

# logging
log = "0.4"
clap_complete = "4.6.2"
clap_complete_nushell = "4.6.0"

# windows default nameserver determination
[target.'cfg(windows)'.dependencies]
ipconfig = { version = "0.3" }

[build-dependencies]
clap = "4"
clap_complete = "4.6.2"
clap_complete_nushell = "4.6.0"
datetime = { version = "0.5.2", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4"
