[package]
name = "dns-transport"
version = "0.2.0-pre"
authors = ["Benjamin Sago <ogham@bsago.me>"]
edition = "2018"

[lib]
doctest = false
test = false


[dependencies]

# dns wire protocol
dns = { path = "../dns" }

# logging
log = "0.4"

# tls networking

# http response parsing
httparse = { version = "1.10", optional = true }

rustls = "0.23"

webpki = "0.22.4"

webpki-roots = "1.0.2"

[features]
default = []  # these are enabled in the main dog crate

with_https = ["httparse"]
